# HUBsim

./: .gitattributes  .gitignore  Doxyfile  Makefile  README.md  annotated.html  classes.html  classhub__float-members.html  classhub__float.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  globals_func.html  hub__float_8cpp.html  hub__float_8hpp.html  hub__float_8hpp_source.html  index.html  menudata.js  pyproject.toml  setup.py  structhub__float_1_1BitFields-members.html  structhub__float_1_1BitFields.html
.github/workflows/: build-wheels.yml  documentation.yml  doxygen.yml
classes/C/: BitFields-Summary.js  BitFields-SummaryToolTips.js  BitFields-ToolTips.js  BitFields.html  hub_float-Summary.js  hub_float-SummaryToolTips.js  hub_float-ToolTips.js  hub_float.html
files/: hub_float-cpp-Summary.js  hub_float-cpp-SummaryToolTips.js  hub_float-cpp.html  hub_float-hpp-Summary.js  hub_float-hpp-SummaryToolTips.js  hub_float-hpp-ToolTips.js  hub_float-hpp.html
menu/: classes.js  files.js
other/: home.html
python_bindings/: README.md  hub_float_binding.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  index.js  pages_0.js  pages_1.js  pages_3.js  related_0.js  related_1.js  searchdata.js
src/: hub_float.cpp  hub_float.hpp
test/: main.cpp
(+66 files in other folders)
