[build-system]
requires = ["setuptools>=40.8.0", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hub_float"
version = "0.1.0"
description = "Python bindings for hub_float - a custom floating-point implementation"
readme = "python_bindings/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HUBformat"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/HUBformat/HUBsim"
Repository = "https://github.com/HUBformat/HUBsim"

[tool.cibuildwheel]
# Build for Python 3.8-3.12
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
# Skip 32-bit builds and musllinux for now
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*"]

[tool.cibuildwheel.environment]
CXXFLAGS = "-std=c++17"
